# DD_SWGOH-Utils

./: .editorconfig  .env_template  .gitignore  Procfile  README.md  manage.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
.github/workflows/: build.yml
SWGOH_Utils/: asgi.py  settings.py  urls.py  wsgi.py
about_players/: __init__.py  admin.py  apps.py  models.py
guild_im/: __init__.py  admin.py  apps.py  models.py
guild_im/migrations/: 0001_initial.py
settings/: settings.py  urls.py
squad_constructor/: apps.py  models.py
squad_constructor/logics/: templates.py  units_and_squads.py
swgoh_guilds/: urls.py
swgoh_guilds/im/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
swgoh_guilds/im/templates/: im_data.html  im_index.html
swgoh_sync/: __init__.py  admin.py  apps.py
swgoh_sync/logics/: actions.py  base_sync.py  guild_sync.py  player_sync.py
swgoh_sync/managers/: base.py  guild.py  guilds.py
swgoh_sync/models/: base.py  guild.py  guilds.py
sync_swgoh/: __init__.py  admin.py  apps.py  managers.py  models.py  sync_swgoh.py  sync_to_db.py
sync_swgoh/migrations/: 0001_initial.py
