[tool.poetry]
name = "DD_SWGOH-Utils"
version = "0.2.0"
description = ""
authors = ["Stas Cartoon <bycs@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
pip = "^20.2.4"
Django = "^3.1"
requests = "^2.24.0"
pandas = "^1.1.2"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
pip = "^20.2.4"
Django = "^3.1"
requests = "^2.24.0"
pandas = "^1.1.2"
bs4 = "^0.0.1"
flake8 = "^3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
