[tool.poetry]
name = "DD_SWGOH-Utils"
version = "0.2.0"
readme = "README.md"
description = "Utilities to help players and officers in the game SWGOH"
authors = ["Stas Cartoon <bycs@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
requests = "^2.25.0"
pandas = "^1.2"
bs4 = "^0.0.1"
python-dotenv = "^0.17"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
flake8 = "^3.9"
flake8-black = "^0.2"
flake8-builtins = "^1.5"
flake8-django = "^1.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
